<resources>
    <!-- Title for the application. -->
    <string name="app_name">Music Player</string>

    <!-- Category name for current song -->
    <string name="category_current_song">Now Playing</string>

    <!-- Category name for songs list -->
    <string name="category_songs">Songs</string>

    <!-- Category name for artists list -->
    <string name="category_artists">Artists</string>

    <!-- Category name for albums list -->
    <string name="category_albums">Albums</string>

    <!-- Default value for TextView related to thee SeekBar -->
    <string name="song_lenght_default_value">0:00</string>

    <!-- Artists list -->
    <string name="artist2">Adele</string>
    <string name="artist3">Britney Spears</string>
    <string name="artist4">Alvaro Soler</string>
    <string name="artist5">Ludovico Einaudi</string>
    <string name="artist6">Natalia Oreiro</string>
    <string name="artist7">Skillet</string>

    <!-- Album titles -->
    <string name="album2">21</string>
    <string name="album3">Britney</string>
    <string name="album4">Eterno Agosto</string>
    <string name="album5">Elegy for the Arctic</string>
    <string name="album6">Tu Veneno</string>
    <string name="album7">Awake</string>

    <!-- Song titles -->
    <string name="song2">Rolling in the Deep</string>
    <string name="song3">Lonely</string>
    <string name="song4">Agosto</string>
    <string name="song5">Elegy for the Arctic</string>
    <string name="song6">Rio De La Plata</string>
    <string name="song7">Monster</string>

    <!-- Explanations -->
    <string name="activity_main_explanation">
        The main menu of the app where the user can choose \"where to go\" by clicking on any item in the menu.
    </string>

    <string name="activity_albums_explanation">
        This activity presents a list of albums.
        If you\'ll click on the album then activity with a list of songs from this album will appear.
        \nRight now, only first four CardViews have OnClickListeners!
    </string>

    <string name="activity_artists_explanation">
        This activity presents a list of artists.
        If you\'ll click on the album then activity with a list of songs of this artist will appear.
        \nRight now, only first four CardViews have OnClickListeners!
    </string>

    <string name="activity_songs_explanation">
        This activity presents a list of songs (from selected album, artist or the whole library).
        If you\'ll click on the song then activity with a selected song as a currently playing will appear.
        \nRight now, only first three CardViews have OnClickListeners!
        \n
        \nAlso, there should be a custom class, for example, SongInformation
        which will contain all information about the song: Title, Artist name, Album name, Album cover and Price.
    </string>

    <string name="activity_current_song_explanation">
        To see this toast message once again press \"Previous\" button!
        \nThis activity presents a currently playing song.
        \nTo complete the implementation of this activity MediaPlayer class should be used (to play audio files).
        \nIt\'s partially implemented. You can play and pause a sample song.
        \nIt\'ll be stopped when you will leave this activity.
        \nThe album cover is also set as a background image.
        \nAlso, there should be a custom class, for example, SongInformation
        which will contain all information about the song: Title, Artist name, Album name, Album cover and Price.
    </string>

    <string name="activity_payment_explanation">
        This activity presents details about  the song that user wants to purchase.
        \nAfter clicking "Purchase" button on this screen.
        \nIn-app Billing API should be used in order to be able to sell something through the App.
    </string>

    <string name="favorite_button_positive_message">
        Song marked as Favorite.
    </string>

    <string name="favorite_button_negative_message">
        Song is not Favorite anymore.
    </string>

    <string name="favorite_button_text">
        Favorite
    </string>

    <string name="purchase_button_text">
        Purchase
    </string>

    <string name="total_price_text_view">
        Total price:
    </string>

    <string name="price">
        $2.15
    </string>

    <string name="payment_button">
        Pay
    </string>
</resources>
