<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.musicplayerapp.PaymentActivity">

    <TextView
        style="@style/explanation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_payment_explanation" />

    <android.support.v7.widget.CardView
        style="@style/CardViewListStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_item_height">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.example.android.musicplayerapp.SquareImageView
                android:layout_width="@dimen/list_item_image_size"
                android:layout_height="match_parent"
                android:src="@drawable/cover2" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/list_item_content_margin"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/CardViewListTitle"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/song2" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="top">

                    <TextView
                        style="@style/CardViewListSubtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/artist2" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=" - " />

                    <TextView
                        style="@style/CardViewListSubtitle.Italic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/album2" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <LinearLayout
        style="@style/PaymentTotalPriceBlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/PaymentTotalPriceTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/total_price_text_view" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/price" />
    </LinearLayout>

    <Button
        style="@style/PaymentButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/payment_button" />

</LinearLayout>
